# tinder-film

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  requirements.txt
backend/app/: .gitignore  main.py  pyproject.toml
backend/app/api/v1/: auth_routes.py  interactions_routes.py  recommender_routes.py  similar_user.py  statistic_routes.py  user_routes.py
backend/app/core/: deps.py
backend/app/db/: db_connect.py  init_db.py  interactioins.py  models.py  statistic.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 1440998dcc1c_user_cascade_user_credentials.py  4b0f426a09e2_create_model_interactions.py  72463ef9456d_.py  8f23b25f49b9_add_access_and_refresh_token_in_.py  ca9f110f821c_init_full_schema.py  dca858ae7d6a_добавление_новых_моделей.py
backend/app/ml_recommender/: index.py
backend/app/repositories/: recommendation_data.py  similar_user_repository.py
backend/app/schemas/: auth.py  recommender.py  similar_user.py  user.py
backend/app/services/: auth.py  auth_jwt.py  implicit_service.py  interactions.py  ml_recommender.py  ml_similar_user.py  statistic.py  users.py
backend/app/utils/: model_storage.py
frontend/: .gitignore  components.json  eslint.config.js  index.html  orval.config.mjs  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/features/card_custom/: card_actions_btn.tsx  card_custom.tsx
frontend/src/routes/: __root.tsx
frontend/src/routes/(app)/: app.recommendations.tsx  app.statistics.tsx  app.tsx
frontend/src/routes/(auth)/: login.tsx  sign_up.tsx
frontend/src/shared/api/: auth.api.ts  custom-instance.ts  films.api.ts  new_api.ts  recommender.api.ts  user.api.ts
frontend/src/widgets/: tinder_cards.tsx
(+27 files in other folders)
